Updates for tonights build

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,3 +10,11 @@
         <script>document.addEventListener('touchstart', function() {},false);</script>
     </head>
     <body>
+
+    	<header>
+    		<h2>
+    			<a href="">
+    				<img src="/img/logo-b.png" alt="{{site.name}}" />
+    			</a>
+    		</h2>
+    	</header>
