--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     	<header>
     		<h2>
     			<a href="">
-    				<img src="/img/logo-b.png" alt="{{site.name}}" />
+    				<img src="https://s3.amazonaws.com/f.cl.ly/items/1b1K0B0118112Q233P0E/logo-b.png" alt="{{site.name}}" />
     			</a>
     		</h2>
     	</header>
