--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
 
     	<header>
     		<h2>
-    			<a href="">
-    				<img src="https://s3.amazonaws.com/f.cl.ly/items/1b1K0B0118112Q233P0E/logo-b.png" alt="{{site.name}}" />
+    			<a href="{{site.root}}">
+    				<img src="{{site.logo}}" alt="{{site.name}}" />
     			</a>
     		</h2>
     	</header>
